# editor2d

./: .gitignore  CMakeLists.txt
src/: main.cpp
